# robotics-minor

./: log.txt
install/: local_setup.sh  setup.sh
install/alignment/lib/alignment/: is_aligned_node  motor_control_node  obstacle_detection_node
install/alignment/share/alignment/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/usb_cam_launch_pkg/share/usb_cam_launch_pkg/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/usb_cam_launch_pkg/share/usb_cam_launch_pkg/launch/: usb_cam_launch.py
log/: latest_build
src/alignment/: package.xml  setup.cfg  setup.py
src/alignment/alignment/: is_aligned.py  motor_control.py  navigation.py  obstacle_detection.py
src/gazebo/ros_gz_application/: CMakeLists.txt  package.xml
src/gazebo/ros_gz_bringup/: CMakeLists.txt  package.xml
src/gazebo/ros_gz_bringup/config/: diff_drive.rviz  ros_gz_bridge.yaml
src/gazebo/ros_gz_bringup/launch/: diff_drive.launch.py  rrbot_setup.launch.py
src/gazebo/ros_gz_description/: package.xml
src/gazebo/ros_gz_description/models/diff_drive/: .model.sdf.swp  attempt_convert_to.sdf  log.txt  model.sdf  model.urdf  old.sdf
src/gazebo/ros_gz_description/models/meshes/: gazebo-wheels.STL  wheel0.STL  wheel1.STL
src/gazebo/ros_gz_gazebo/: CMakeLists.txt  README.md  package.xml
src/gazebo/ros_gz_gazebo/include/ros_gz_gazebo/: BasicSystem.hh  FullSystem.hh
src/gazebo/ros_gz_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/gazebo/ros_gz_gazebo/worlds/: diff_drive.sdf
src/robot_model/: CMakeLists.txt  package.xml
src/robot_model/launch/: robot_in_greenhouse.launch
src/robot_model/model/: model.sdf
src/robot_model/world/: greenhouse.world
src/usb_cam_launch_pkg/: package.xml  setup.cfg  setup.py
src/usb_cam_launch_pkg/launch/: usb_cam_launch.py
