ckage format="3">
  <name>robot_model</name>
    <version>0.0.1</version>
      <description>The robot model package</description>
        <maintainer email="youremail@example.com">Your Name</maintainer>
	  <license>MIT</license>

	    <buildtool_depend>ament_cmake</buildtool_depend>

	      <!-- Declare ROS dependencies -->
	      <depend>rclcpp</depend>
	        <depend>gazebo_ros</depend>
		  <depend>std_msgs</depend>

		    <!-- Export -->
		    <export>
			        <gazebo_plugins/>
				  </export>
			  </package>
